# Agentic_ai_researcher

./: .dockerignore  .env.example  .gitignore  Dockerfile  EVALUATION TECHNIQUES SUMMARY.txt  Interview ready Q&A.txt  Makefile  Project structure.txt  README.md  docker-compose.yml  e2e_err.txt  entrypoint.sh  fix_mypy.py  fix_mypy_broad.py  implementation_plan.md  pipeline.txt  pyproject.toml
.github/workflows/: cd.yml  ci.yml
prompts/: researcher.txt  supervisor.txt  writer.txt
src/ai_researcher/: __init__.py  cli.py  config.py  exceptions.py  logging.py
src/ai_researcher/agent/: __init__.py  checkpointer.py  graph.py  guardrails.py  prompts.py  state.py  supervisor.py
src/ai_researcher/models/: __init__.py  api_schemas.py  schemas.py
src/ai_researcher/server/: main.py
src/ai_researcher/tools/: AGENT_GRAPH.md  __init__.py  arxiv.py  db.py  google_scholar.py  latex_renderer.py  pdf_reader.py  pubmed.py  query_pdf.py  scratchpad.py  semantic_scholar.py  summarizer.py  web_search.py  wikipedia_tool.py  youtube.py
src/ai_researcher/ui/: __init__.py  client.py  streamlit_app.py
tests/: conftest.py  conftest_e2e.py  test_agent_e2e.py  test_checkpointer.py  test_config.py  test_logging_module.py  test_ui_client.py
tests/eval/: eval_llm_judge.py  eval_rag.py  eval_tool_selection.py  eval_trajectory.py  judge_test_cases.json  langsmith_evaluate.py  langsmith_evaluate_judge.py  langsmith_evaluate_rag.py  langsmith_evaluate_trajectory.py  langsmith_upload_dataset.py  langsmith_upload_judge.py  langsmith_upload_rag.py  langsmith_upload_trajectory.py  rag_test_cases.json  test_cases.json  trajectory_cases.json
tests/eval/reports/: judge_20260403_162553.json  rag_20260403_120810.json  rag_20260403_123041.json  tool_selection_20260402_190642.json  tool_selection_20260402_191913.json  tool_selection_20260403_110656.json  tool_selection_20260412_120937.json  tool_selection_20260415_170722.json  tool_selection_20260415_171623.json  tool_selection_20260415_172507.json  trajectory_20260402_203406.json  trajectory_20260403_110734.json
tests/test_agent/: __init__.py  test_graph.py  test_guardrails.py  test_supervisor.py
tests/test_server/: __init__.py  test_api.py
tests/test_tools/: __init__.py  test_arxiv.py  test_google_scholar.py  test_latex_renderer.py  test_pdf_reader.py  test_pubmed.py  test_query_pdf.py  test_scratchpad.py  test_semantic_scholar.py  test_summarizer.py  test_web_search.py  test_wikipedia.py  test_youtube.py
